--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root {
-  font-size: 16px;
+  /* font-size: 16px; */
 }
 
 html, body {
@@ -18,12 +18,12 @@ html, body {
   border-right: 1px solid #ededed;
   min-height: 100vh;
   background: #f7f7f7;
-  position: fixed;
+  /* position: fixed;
   top: 0;
   left: 0;
   z-index: 91;
   transform: translateX(0);
-  transition: all 3s;
+  transition: all 3s; */
 }
 
 .hurdle {
@@ -111,3 +111,98 @@ html, body {
   border-right: .1rem solid red;
  }
 
+ .wrap {
+  display: flex;
+  /* width: 65rem; */
+ }
+
+ .search {
+   width: 40vw;
+   height: 2.5rem;
+   border: 1px solid #f0ebeb;
+   padding-left: 2.5rem;
+   margin-left: 13.5rem;
+   margin-top: 1rem;
+   border-radius: 4px;
+ }
+
+ .searchh {
+   position: absolute;
+   margin-left: 13rem;
+   margin-top: 1rem;
+   color: #d0d0d0;
+   padding-top: 0.75rem;
+   padding-left: 1rem;
+ }
+
+ .logo {
+   display: flex;
+   margin-left: 5rem;
+   margin-top: 0.85rem;
+   justify-content: space-between;
+   align-items: center;
+   width: 10em;
+  }
+   
+  .mesage {
+    color: #d0d0d0;
+  }
+
+ .pic {
+   width: 2.75rem;
+   height: 2.75rem;
+   border-radius: 50%;
+ }
+
+ .dots {
+   width: 0.5em;
+   height: 0.5em;
+   border-radius: 50%;
+   background-color: #5ba4fc;
+   margin-left: -2.5em;
+   margin-top: -2em;
+ }
+
+ .mobile {
+   background-color: #ffffff;
+   height: 20rem;
+   width: 53vw;
+   margin: 2rem 13.5rem;
+   border-radius: 5px;
+   border: #d0d0d0 1px solid;
+   padding: 2rem 2rem;
+   display: flex;
+ }
+
+ .money {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   width: 30vw;
+  }
+
+.dols {
+  font-family: "Montserrat", sans-serif;   
+  color: #4a4a4a;
+  font-size: 30px;
+}
+
+.date {
+  font-size: 14px;
+  color: #4a4a4a;
+}
+
+.doll {
+  content: '$';
+  top: -5px;
+  position: relative;
+  font-size: 65%;
+}
+
+.letter {
+  padding-top: 1.5rem;
+  color: #787878;
+  font-size: 14px;
+  border-bottom: #d0d0d0 1px solid;
+  padding-bottom: 1.5rem;
+}
